[project]
name = "xiaofu-image-video-compare"
description = "ComfyUI custom nodes for comparing images and local videos with an interactive split-view preview."
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
  "av>=12.0.0",
]

[project.urls]
Repository = "https://github.com/Yifo98/XiaoFu-Image-Video-Compare"

[tool.comfy]
web = "web"
